WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305205
AX: Button label is not updated after dynamic aria-hidden state change of descendant
https://bugs.webkit.org/show_bug.cgi?id=305205
Summary
AX: Button label is not updated after dynamic aria-hidden state change of des...
Tyler Wilcock
Reported
2026-01-09 09:01:51 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-09 09:01:57 PST
<
rdar://problem/167848026
>
Tyler Wilcock
Comment 2
2026-01-09 14:49:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56363
EWS
Comment 3
2026-01-12 10:40:27 PST
Committed
305478@main
(d12f2a54db14): <
https://commits.webkit.org/305478@main
> Reviewed commits have been landed. Closing PR #56363 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug