AX: Button label is not updated after dynamic aria-hidden state change of descendant https://bugs.webkit.org/show_bug.cgi?id=305205 rdar://167848026

Reviewed by Joshua Hoffman.

With this commit, when aria-hidden changes, we now update the cached accessibility text of any associated object
(specifically, ancestry and / or labelledby association).

* LayoutTests/accessibility/dynamic-aria-hidden-inside-button-expected.txt: Added.
* LayoutTests/accessibility/dynamic-aria-hidden-inside-button.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/accessibility/dynamic-aria-hidden-inside-button-expected.txt: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::AXObjectCache::updateCachedTextOfAssociatedObjects):
* Source/WebCore/accessibility/AXObjectCache.h:

Canonical link: https://commits.webkit.org/305478@main